--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -8,32 +8,12 @@
     <meta name="author" content="{{ AUTHOR }}">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css" type="text/css" />
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
-      .tag-1 {
-        font-size: 13pt;
-      }
-      .tag-2 {
-        font-size: 10pt;
-      }
-      .tag-2 {
-        font-size: 8pt;
-      }
-      .tag-4 {
-        font-size: 6pt;
-     }
-    </style>
-    <link href="{{ SITEURL }}/theme/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.css" type="text/css" />
+    <link href="{{ SITEURL }}/theme/css/bootstrap-responsive.css" rel="stylesheet">
         <link href="{{ SITEURL }}/theme/css/font-awesome.css" rel="stylesheet">
 
     <link href="{{ SITEURL }}/theme/css/pygments.css" rel="stylesheet">
+    <link href="{{ SITEURL }}/theme/css/blog.css" rel="stylesheet" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -55,7 +35,7 @@
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-static-top  sansFont">
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -63,9 +43,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="{{ SITEURL }}/index.html">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a>
+          <a class="brand siteTitle" href="{{ SITEURL }}/index.html">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a>
           <div class="nav-collapse">
-            <ul class="nav">
+            <ul class="nav pull-right">
               {% for title, link in MENUITEMS %}
                   <li><a href="{{ link }}">{{ title }}</a></li>
               {% endfor %}
@@ -73,18 +53,18 @@
               {% for page in PAGES %}
                 <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
               {% endfor %}
-                          <li class="divider-vertical"></li>
+                        
               {% endif %}
               {% for cat, null in categories %}
                   <li {% if cat == category %}class="active"{% endif %}>
                     <a href="{{ SITEURL }}/{{ cat.url }}">
-						<i class="icon-folder-open icon-large"></i>{{ cat }}
+						{{ cat }}
 					</a>
                   </li>
               {% endfor %}
 
                           <ul class="nav pull-right">
-                                <li><a href="{{ SITEURL }}/archives.html"><i class="icon-th-list"></i>Archives</a></li>
+                                <li><a href="{{ SITEURL }}/archives.html">Archives</a></li>
                           </ul>
 
             </ul>
@@ -107,19 +87,32 @@
 
       </div><!--/row-->
 
-      <hr>
+   </div><!--/.fluid-container-->
 
       <footer>
-        <address id="about">
-                Proudly powered by <a href="http://pelican.notmyidea.org/">Pelican <i class="icon-external-link"></i></a>,
-                                which takes great advantage of <a href="http://python.org">Python <i class="icon-external-link"></i></a>.
-        </address><!-- /#about -->
-
-        <p>The theme is from <a href="http://twitter.github.com/bootstrap/">Bootstrap from Twitter <i class="icon-external-link"></i></a>,
-                   and <a href="http://fortawesome.github.com/Font-Awesome/">Font-Awesome <i class="icon-external-link"></i></a>, thanks!</p>
+        
+        <div class="footer">
+			<div class="footerLines"></div>
+			<ul class="bottomMenu">
+				<li><a href="http://www.folissimo.com/about" title="About Folissimo">About Folissimo</a></li>
+				<li><a href="http://www.folissimo.com/support" title="Folissimo Support">Support</a></li>
+				<li><a href="http://www.folissimo.com/about/terms" title="Terms and Conditions">Terms &amp; Conditions</a></li>
+				<li><a href="http://www.folissimo.com/about/privacy" title="Folissimo Privacy Policy">Privacy Policy</a></li>
+			</ul>
+			<ul class="socialLinks">
+				<li class="facebook"><a href="http://www.facebook.com/folissimo" target="_blank">Facebook</a></li>
+				<li class="twitter"><a href="http://www.twitter.com/folissimo" target="_blank">Twitter</a></li>
+				<li class="pintrest"><a href="http://www.pinterest.com/folissimo" target="_blank">Pinterest</a></li>
+				<li class="email"><a href="mailto:getintouch@folissimo.com">getintouch@folissimo.com</a></li>
+			</ul>
+			<div class="latestTweets">Latest Tweets
+				<ul id="twitter_update_list"><li>Twitter feed loading</li></ul>
+			</div>
+		
+		</div>
       </footer>
 
-    </div><!--/.fluid-container-->
+    
 
 
     {% include 'analytics.html' %}
@@ -130,5 +123,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ SITEURL }}/theme/js/jquery-1.7.2.min.js"></script>
     <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
+<script type="text/javascript" src="https://api.twitter.com/1/statuses/user_timeline.json?include_entities=true&include_rts=true&screen_name=folissimo&count=3&exclude_replies=true&callback=twitterCallback2"></script>
   </body>
 </html>
