--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -1,35 +1,38 @@
 <ul class="nav nav-list">
+<li><h4>About Folissimo</h4></li>	
+<li><em><a href="http://www.folissimo.com/" target="_blank">Folissimo</a> is the most elegant way to create and manage your visual
+	website</em></li>
 {% if LINKS %}
-<li class="nav-header"><h4><i class="icon-external-link"></i>blogroll</h4></li>
+<li class="nav-header"><h4>links</h4></li>
 {% for name, link in LINKS %}
-    <li><a href="{{ link }}"><i class="icon-external-link"></i>{{ name }}</a></li>
+    <li><a href="{{ link }}">{{ name }}</a></li>
 {% endfor %}
 {% endif %}
 {% if SOCIAL %}
-<li class="nav-header"><h4><i class="icon-home icon-large"></i> social</h4></li>
-<li><a href="{{ SITEURL }}/{{ FEED }}" rel="alternate"><i class="icon-bookmark icon-large"></i>atom feed</a></li>
+<li class="nav-header"><h4> social</h4></li>
+<li><a href="{{ SITEURL }}/{{ FEED }}" rel="alternate">atom feed</a></li>
 {% if FEED_RSS %}
-<li><a href="{{ SITEURL }}/{{ FEED_RSS }}" rel="alternate"><i class="icon-bookmark icon-large"></i>rss feed</a></li>
+<li><a href="{{ SITEURL }}/{{ FEED_RSS }}" rel="alternate">rss feed</a></li>
 {% endif %}
 {% for name, link in SOCIAL %}
-    <li><a href="{{ link }}"><i class="icon-{{ name }}-sign icon-large"></i>{{ name }}</a></li>
+    <li><a href="{{ link }}">{{ name }}</a></li>
 {% endfor %}
 {% endif %}
 
-<li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
+<li class="nav-header"><h4>Categories</h4></li>
 {% for cat, null in categories %}
 <li>
 <a href="{{ SITEURL }}/{{ cat.url }}">
-    <i class="icon-folder-open icon-large"></i>{{ cat }}
+    {{ cat }}
 </a>
 </li>
 {% endfor %}
 
-<li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="nav-header"><h4>Tags</h4></li>
 {% for tag in tag_cloud %}
 <li class="tag-{{ tag.1 }}">
     <a href="{{ SITEURL }}/{{ tag.0.url }}">
-        <i class="icon-tag icon-large"></i>{{ tag.0 }}
+        {{ tag.0 }}
     </a>
 </li>
 {% endfor %}
