--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -4,11 +4,33 @@
 {% if articles %}
         {% for article in (articles_page.object_list if articles_page else articles) %}
         <div class="article">
-                <h1><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
-                <div class="well small">{% include "article_infos.html" %}</div>
-                <div class="summary">{{ article.summary }}
-                        <a class="btn primary xsmall" href="{{ SITEURL }}/{{ article.url }}">more ...</a>
-                </div>
+                
+                {% if loop.index < 2 %}
+                	<h1><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
+                	{% if article.image %}
+	                	<div class="articleImage">
+	                		<img src="{{ SITEURL }}/static/images/{{ article.image }}" />
+	                	</div>
+	                {% endif %}
+	                <div class="introInfo">
+	                        {% include 'article_infos.html' %}
+	                </div>	
+                	<div class="articleContent">{{ article.content }}</div>
+                	<div class="articleFooter well">
+						<span class="label">Category</span>
+						<a href="{{ SITEURL }}/{{ article.category.url }}"><i class="icon-folder-open"></i>{{ article.category }}</a>.
+						{% include 'taglist.html' %}
+						{% include 'translations.html' %}
+                	</div>
+                {% else %}
+               		<h3><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h3>
+               		<div class="well">
+	                        {% include 'article_infos.html' %}
+	                </div> 
+	                <div class="summary">{{ article.summary }}
+	                        <a class="btn primary xsmall" href="{{ SITEURL }}/{{ article.url }}">more ...</a>
+	                </div>
+                {% endif %}
         </div>
         <hr />
         {% endfor %}
