--- a/theme/templates/article_infos.html
+++ b/theme/templates/article_infos.html
@@ -1,15 +1,15 @@
 <div class="post-info">
-<span class="label">Date</span>
+<span class="label first">Date</span>
 <abbr class="published" title="{{ article.date.isoformat() }}">
-        <i class="icon-calendar"></i>{{ article.locale_date }}
+        <i class="icon-calendar"></i> {{ article.locale_date }} 
 </abbr>
 {% if article.author %}
-<span >By</span>
-<a href="{{ SITEURL }}/{{ article.author.url }}"><i class="icon-user"></i>{{ article.author }}</a>
+<span class="label">By</span>
+<a href="{{ SITEURL }}/{{ article.author.url }}"><i class="icon-user"></i>  {{ article.author }} </a>
 {% endif %}
 
 {% if PDF_PROCESSOR %}
-<span >
+<span class="label">
 <a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">PDF</a>
 </span>
 {% endif %}
