--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -8,8 +8,8 @@
     <meta name="author" content="{{ AUTHOR }}">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.css" type="text/css" />
-    <link href="{{ SITEURL }}/theme/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css" type="text/css" />
+    <link href="{{ SITEURL }}/theme/css/bootstrap-responsive.min.css" rel="stylesheet">
         <link href="{{ SITEURL }}/theme/css/font-awesome.css" rel="stylesheet">
 
     <link href="{{ SITEURL }}/theme/css/pygments.css" rel="stylesheet">
@@ -21,20 +21,39 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{ SITEURL }}/theme/images/favicon.ico">
-    <link rel="apple-touch-icon" href="{{ SITEURL }}/theme/images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ SITEURL }}/theme/images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ SITEURL }}/theme/images/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="{{ SITEURL }}/theme/img/favicon.ico">
+    <link rel="apple-touch-icon" href="{{ SITEURL }}/theme/img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ SITEURL }}/theme/img/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ SITEURL }}/theme/img/apple-touch-icon-114x114.png">
 
     <link href="{{ SITEURL }}/{{ FEED }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} ATOM Feed" />
     {% if FEED_RSS %}
     <link href="{{ SITEURL }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
     {% endif %}
+	<script type="text/javascript">
 
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-29682960-6']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
 
   <body>
-
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <div class="navbar navbar-inverse navbar-static-top  sansFont">
       <div class="navbar-inner">
         <div class="container-fluid">
@@ -65,6 +84,10 @@
 
                           <ul class="nav pull-right">
                                 <li><a href="{{ SITEURL }}/archives.html">Archives</a></li>
+                                <li><a href="http://www.folissimo.com/about">About Folissimo</a></li>
+                                <li><a href="http://www.folissimo.com/#signup">Try Folissimo</a></li>
+                                <li><a href="http://www.folissimo.com/support">Support</a></li>
+                                 <li><a href="http://admin.folissimo.com">Login</a></li>
                           </ul>
 
             </ul>
