blog looking good

--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -1,7 +1,14 @@
 <ul class="nav nav-list">
 <li><h4>About Folissimo</h4></li>	
-<li><em><a href="http://www.folissimo.com/" target="_blank">Folissimo</a> is the most elegant way to create and manage your visual
-	website</em></li>
+<li><em>
+	<a href="http://www.folissimo.com/" target="_blank">Folissimo</a>
+	 is the most elegant way to create and manage your visual
+	website</em>
+	<p>
+		<a href="http://www.folissimo.com/#signup" target="_blank">Try it
+			here free for 40 days</a>
+	</p>
+</li>
 {% if LINKS %}
 <li class="nav-header"><h4>links</h4></li>
 {% for name, link in LINKS %}
