--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -62,7 +62,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand siteTitle" href="{{ SITEURL }}/index.html">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a>
+          
           <div class="nav-collapse">
             <ul class="nav pull-right">
               {% for title, link in MENUITEMS %}
@@ -97,14 +97,19 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid centred">
       <div class="row">
-        <div class="span9" id="content">
+      	<div class="span8 offset2">
+      		<a class="brand siteTitle" href="{{ SITEURL }}/index.html">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a>
+      	</div>
+      </div>
+      <div class="row">
+        <div class="span8 offset2" id="content">
             {% block content %}
             {% endblock %}
         </div><!--/span-->
 
-                <div class="span3 well sidebar-nav" id="sidebar">
+                <div class="span2 well sidebar-nav" id="sidebar">
             {% include 'sidebar.html' %}
         </div><!--/.well -->
 
