--- a/theme/static/css/blog.css
+++ b/theme/static/css/blog.css
@@ -54,7 +54,7 @@ margin: 3px;
 	line-height: 35px !important;
 }
 .centred {
-	max-width: 1400px
+	max-width: 1400px;
 	margin: auto !important;
 }
 .siteTitle:hover {
