--- a/theme/static/css/blog.css
+++ b/theme/static/css/blog.css
@@ -89,7 +89,8 @@ margin: 3px;
 	right: 0px;
 	padding: 10px;
 	color: #fff;
-	font-size: 20px;
+	font-size: 30px;
+	padding: 12% 20px 4%;
 }
 .articleContent {
 	margin: 20px 0px;
