blog update for mailout

--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -1,11 +1,12 @@
+<h4 class="sideTitle"><a  href="{{ SITEURL }}/index.html">Folissimo Blog</a></h4>
 <ul class="nav nav-list">
-<li><h4>About Folissimo</h4></li>	
+
 <li><em>
 	<a href="http://www.folissimo.com/" target="_blank">Folissimo</a>
 	 is the most elegant way to create and manage your visual
 	website</em>
 	<p>
-		<a href="http://www.folissimo.com/#signup" target="_blank">Try it
+		<a href="http://www.folissimo.com/#signup" target="_blank" class="tryItNow">Try it
 			here free for 40 days</a>
 	</p>
 </li>
