--- a/theme/static/css/blog.css
+++ b/theme/static/css/blog.css
@@ -53,6 +53,18 @@ margin: 3px;
 	color: #000;
 	line-height: 35px !important;
 }
+.tryItNow {
+	background: #00B900;
+	padding: 4px 8px;
+	color: white !important;
+	cursor: pointer;
+	display: inline-block;
+	margin: 30px 10px;
+	font-family: Georgia, serif;
+	font-style: italic;
+	font-weight: normal;
+	text-transform: none;
+}
 .centred {
 	max-width: 1400px;
 	margin: auto !important;
@@ -66,8 +78,18 @@ margin: 3px;
 	background: #fff;
 }
 .sidebar-nav {
-	border: 1px solid #C7C7C7;
 	margin-bottom: 80px;
+	padding-top: 0px;
+	background: #F0F0F0;
+}
+.sideTitle {
+	background: #000;
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px;
+}
+.sideTitle a {
+	color: #fff;
 }
 .navbar-static-top {
 	background:  url(../img/adBG.gif) repeat top left;
@@ -81,17 +103,13 @@ margin: 3px;
 	position: relative;
 }
 .articleTitle {
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
+	display:block;
 	padding: 10px;
 	color: #fff;
 	font-size: 30px;
 	padding: 5% 20px 4%;
     line-height: 35px;
     background: #000;
-    background: rgba(0,0,0,0.3);
     text-shadow: 0px 0px 5px #000;
     -webkit-text-shadow: 0px 0px 5px #000;
     -webkit-transition: background 1s;
@@ -101,6 +119,13 @@ margin: 3px;
 .articleContent {
 	margin: 20px 0px;
 }
+.moreInfo {
+	background: #000;
+	color: #fff;
+	display: inline-block;
+	margin: 30px 10px 20px 0px;
+}
+
 a.articleTitle:hover {
 	background: #000;
 	background: rgba(0,0,0,0.9);
