--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -3,12 +3,14 @@
 {% block content %}
 {% if articles %}
         {% for article in (articles_page.object_list if articles_page else articles) %}
-        <div class="article">
+        
                 {% if loop.index < 4 %}
+               	<div class="article">
                 	{% if article.image %}
+                		<a class="articleTitle sansFont" href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
 	                	<div class="articleImage">
 	                		<img src="{{ SITEURL }}/static/images/{{ article.image }}" />
-	                		<a class="articleTitle sansFont" href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
+	                		
 	                	</div>
 	                {% else %}
 		                <h1><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
@@ -26,17 +28,19 @@
 						{% include 'translations.html' %}
 						<div class="fb-like" data-href="http://blog.folissimo.com/{{ article.url }}" data-send="false" data-layout="button_count" data-width="200" data-show-faces="true" data-font="tahoma"></div>
                 	</div>
+                </div>
+       			<hr />
                 {% else %}
+                <div class="span3">
                		<h3><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h3>
-               		<div class="well">
-	                        {% include 'article_infos.html' %}
-	                </div>
 	                <div class="summary">{{ article.summary }}
-	                        <a class="btn primary xsmall" href="{{ SITEURL }}/{{ article.url }}">more ...</a>
+	                        
 	                </div>
+	                <a class="btn primary xsmall moreInfo" href="{{ SITEURL }}/{{ article.url }}">more ...</a>
+	                <br /><br />
+	              </div>
                 {% endif %}
-        </div>
-        <hr />
+        
         {% endfor %}
 {% endif %}
 
