twitter follow button

--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -9,6 +9,8 @@
 		<a href="http://www.folissimo.com/#signup" target="_blank" class="tryItNow">Try it
 			here free for 40 days</a>
 	</p>
+	<a href="https://twitter.com/folissimo" class="twitter-follow-button" data-show-count="false">Follow @folissimo</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </li>
 {% if LINKS %}
 <li class="nav-header"><h4>links</h4></li>
