--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -1,4 +1,4 @@
-<h4 class="sideTitle"><a  href="{{ SITEURL }}/index.html">Folissimo Blog</a></h4>
+<h4 class="sideTitle"><a  href="{{ SITEURL }}/index.html">the official blog</a></h4>
 <ul class="nav nav-list">
 
 <li><em>
@@ -7,7 +7,7 @@
 	website</em>
 	<p>
 		<a href="http://www.folissimo.com/#signup" target="_blank" class="tryItNow">Try it
-			here free for 40 days</a>
+			free for 40 days</a>
 	</p>
 	<a href="https://twitter.com/folissimo" class="twitter-follow-button" data-show-count="false">Follow @folissimo</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
