--- a/theme/static/css/blog.css
+++ b/theme/static/css/blog.css
@@ -1,165 +1,182 @@
- .sansFont {
- 	font-family: 'CantarellRegular', Helvetica, Arial, sans-serif;
- 	text-transform: uppercase;
-}
-html {
-	background: #000;
-}
-body {
-	background: #fff url(../img/starBackground.png) repeat;
+.sansFont {
+  font-family: "CantarellRegular", Helvetica, Arial, sans-serif;
+  text-transform: uppercase; }
 
-}
+html {
+  background: black; }
+
+body {
+  background: white; }
+
+.articleFooter.well {
+  background: #dddddd;
+  padding: 10px; }
+
 .articleFooter.well > * {
-margin: 3px;
-}
+  margin: 3px; }
+
 .summary {
-	font-style: italic;
-}
+  font-style: italic; }
+
 .introInfo {
-	padding: 30px 3px;
-}
-  .sidebar-nav {
-    padding: 9px 0;
-  }
-  .tag-1 {
-    font-size: 13pt;
-  }
-  .tag-2 {
-    font-size: 10pt;
-  }
-  .tag-2 {
-    font-size: 10pt;
-  }
-  .tag-4 {
-    font-size: 10pt;
- }
+  padding: 30px 3px; }
+
+.sidebar-nav {
+  padding: 9px 0; }
+
+.tag-1 {
+  font-size: 13pt; }
+
+.tag-2 {
+  font-size: 10pt;
+  font-size: 10pt; }
+
+.tag-4 {
+  font-size: 10pt; }
+
 .logo {
-	background: #fff url(../img/folissimoLogo_onWhite.png) top left no-repeat;
-	width: 180px;
-	height: 25px;
-	display: inline-block;
-	background-size: auto 100%;
-}
+  background: white url(../img/folissimoLogo_onWhite.png) top left no-repeat;
+  width: 180px;
+  height: 25px;
+  display: inline-block;
+  background-size: auto 100%; }
 
 .siteTitle {
-	font-style: italic;
-	text-transform: none;
-	font-family: Georgia, serif;
-	font-size: 33pt !important;
-	padding: 0px 0px 34px!important;
-	display: block;
-	margin: 35px;
-	border-bottom: 1px solid #C5C5C5;
-	color: #000;
-	line-height: 35px !important;
-}
-.tryItNow {
-	background: #00B900;
-	padding: 4px 8px;
-	color: white !important;
-	cursor: pointer;
-	display: inline-block;
-	margin: 30px 10px;
-	font-family: Georgia, serif;
-	font-style: italic;
-	font-weight: normal;
-	text-transform: none;
-}
-.centred {
-	max-width: 1400px;
-	margin: auto !important;
-}
-.siteTitle:hover {
-	text-decoration: none;
-}
-.article, article {
-	margin: 0px 15px 15px;
-	padding: 0px 20px 20px;
-	background: #fff;
-}
-.sidebar-nav {
-	margin-bottom: 80px;
-	padding-top: 0px;
-	background: #F0F0F0;
-}
-.sideTitle {
-	background: #000;
-	display: block;
-	margin: 0 0 20px;
-	padding: 10px;
-}
-.sideTitle a {
-	color: #fff;
-}
-.navbar-static-top {
-	background:  url(../img/adBG.gif) repeat top left;
-	padding-bottom: 25px;
-	margin-bottom: 50px;
-}
-.label {
-	  margin: 0px 10px;
-}
-.articleImage {
-	position: relative;
-}
-.articleTitle {
-	display:block;
-	padding: 10px;
-	color: #fff;
-	font-size: 30px;
-	padding: 5% 20px 4%;
-    line-height: 35px;
-    background: #000;
-    text-shadow: 0px 0px 5px #000;
-    -webkit-text-shadow: 0px 0px 5px #000;
-    -webkit-transition: background 1s;
-    -moz-transition: background 1s;
-    -o-transition: background 1s;
-}
-.articleContent {
-	margin: 20px 0px;
-}
-.moreInfo {
-	background: #000;
-	color: #fff;
-	display: inline-block;
-	margin: 30px 10px 20px 0px;
-}
+  font-style: italic;
+  text-transform: none;
+  font-family: Georgia, serif;
+  font-size: 33pt !important;
+  padding: 0px 0px 34px !important;
+  display: block;
+  margin: 35px;
+  border-bottom: 1px solid #c5c5c5;
+  color: black;
+  line-height: 35px !important; }
 
-a.articleTitle:hover {
-	background: #000;
-	background: rgba(0,0,0,0.9);
-    color: #fff;
-	text-decoration: underline;
-}
+.tryItNow {
+  background: #00b900;
+  padding: 4px 8px;
+  color: white !important;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 26px;
+  line-height: 24px;
+  padding: 8px;
+  margin: 30px 0px;
+  font-family: Georgia, serif;
+  font-style: italic;
+  font-weight: normal;
+  text-transform: none; }
+  .tryItNow:hover {
+    text-decoration: none; }
+
+.centred {
+  max-width: 1400px;
+  margin: auto !important; }
+
+.siteTitle:hover {
+  text-decoration: none; }
+
+.sidebar-nav {
+  margin-bottom: 80px;
+  padding-top: 0px;
+  background: #f0f0f0; }
+
+.sideTitle {
+  background: black url(../img/logo.png) center 8px no-repeat;
+  display: block;
+  text-align: center;
+  margin: 0 0 20px;
+  padding: 10px;
+  padding-top: 50px;
+  font-family: serif;
+  font-style: italic;
+  font-size: 15px;
+  text-transform: none; }
+  .sideTitle a {
+    color: white; }
+
+.navbar-static-top {
+  background: url(../img/adBG.gif) repeat top left;
+  padding-bottom: 0;
+  margin-bottom: 50px; }
+  .navbar-static-top .nav-none {
+    float: none !important; }
+  .navbar-static-top .container-fluid {
+    background: #111111; }
+  .navbar-static-top li {
+    padding: 10px 3px;
+    background: #111111; }
+
+.label {
+  margin: 0px 10px; }
+
+.articleImage {
+  position: relative; }
+
+.articleTitle {
+  display: block;
+  padding: 10px;
+  color: #444444;
+  margin-left: 0;
+  font-size: 25px;
+  padding: 5% 10px 4px 0;
+  border-bottom: 1px dotted #999999;
+  text-align: left;
+  margin-bottom: 30px;
+  line-height: normal;
+  -webkit-transition: background 1s;
+  -moz-transition: background 1s;
+  -o-transition: background 1s; }
+  .articleTitle:hover {
+    text-decoration: none; }
+
+.nav-header {
+  background: transparent;
+  border: none; }
+
+.moreInfo {
+  background: black;
+  color: white;
+  display: inline-block;
+  margin: 30px 10px 20px 0px; }
+
 .label.first {
-	margin-left: 0px;
-}
+  margin-left: 0px; }
+
 .navbar-inverse .navbar-inner {
-	background: none;
-	border-bottom: none;
-}
-.article h1, article h1 {
-	margin-top: 0px;
-	font-size: 16px;
-	background: #000;
-}
-.article h1 a, article h1 a{
-	color: #fff;
-	padding: 20px;
-}
-article h1 a:hover {
-	color: #fff;
-	text-decoration: underline;
-}
+  background: none;
+  border-bottom: none; }
+
+.article, article {
+  margin: 0px 15px 15px;
+  padding: 20px 20px;
+  background: #eeeeee; }
+  .article h1, article h1 {
+    margin-top: 0px;
+    font-size: 16px;
+    background: black; }
+    .article h1 a, article h1 a {
+      color: white;
+      padding: 20px; }
+      .article h1 a:hover, article h1 a:hover {
+        color: white;
+        text-decoration: underline; }
+  .article p, .article li, article p, article li {
+    font-size: 25px;
+    font-weight: 100;
+    line-height: normal;
+    padding: 8px;
+    color: #333333; }
+  .article .entry-content, .article .articleContent, article .entry-content, article .articleContent {
+    padding-bottom: 50px; }
+  .article li, article li {
+    padding: 2px 8px; }
 
 .nav-header-black {
-	background: #000;
-	color: #fff;
-}
-.nav-header-black h1 {
+  background: black;
+  color: white; }
 
-}
 .footer {
   background: #121212;
   color: white;
@@ -177,11 +194,14 @@ article h1 a:hover {
   .footer a {
     color: #aaaaaa;
     font-size: 14px; }
-  .footer ul, .footer li {
+  .footer ul {
     list-style: none;
     padding: 8px 2px;
     float: left; }
   .footer li {
+    list-style: none;
+    padding: 8px 2px;
+    float: left;
     margin: 0;
     padding: 8px 2px 8px 40px;
     clear: left; }
@@ -201,23 +221,30 @@ article h1 a:hover {
     float: right;
     width: 300px;
     margin: 15px 10px 20px 0px; }
-    .footer .latestTweets #twitter_update_list {
+    .footer .latestTweets ul {
       margin: 0;
       font-size: 14px;
       font-family: Georgia, "TeXGyreScholaItalic", serif;
       font-style: italic;
       font-weight: normal;
       text-transform: none; }
-      .footer .latestTweets #twitter_update_list li {
+      .footer .latestTweets ul li {
         margin: 10px 0px !important;
         padding: 0px; }
-@media screen and (max-width:979px){
-	.footer .latestTweets {
-		float: left;
-		text-align: center;
-	}
-	.footer .latestTweets #twitter_update_list {
-		margin: 20px;
-	}
 
-}
+.pagination {
+  margin: 30px; }
+  .pagination ul li a {
+    border: none;
+    background: black;
+    color: white;
+    margin: 10px; }
+    .pagination ul li a:hover {
+      color: black; }
+
+@media screen and (max-width: 979px) {
+  .footer .latestTweets {
+    float: left;
+    text-align: center; }
+    .footer .latestTweets #twitter_update_list {
+      margin: 20px; } }
